--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -2,7 +2,7 @@
 <div class="homepage-container">
   <div class="content-wrapper">
     <div class="hero-content">
-      <h1>Hi, Welcome to Task Manager</h1>
+      <h1>Hi, Welcome to the Task Mate</h1>
       <p>Streamline your workflow and boost productivity with our intuitive task management system.</p>
 
       <div class="features">
